--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,8 @@
+---
+collections:
+  - community.general
+  - ansible.utils
+
 galaxy_info:
   role_name: substrate_deployer
   namespace: standardtech_bot
